--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.4
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
