--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_svg: ^2.0.4
   country_picker: ^2.0.20
   google_sign_in: ^6.1.0
+  animated_icon_button: ^1.0.2
+  flutter_icons: ^1.1.0
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -49,6 +52,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+  
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -63,6 +67,7 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   # To add custom fonts to your application, add a fonts section here,
+
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
