--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/login_logo_emptybackg.svg
+    - assets/logosolo.svg
     - assets/images/
     - assets/icons/
   #   - images/a_dot_ham.jpeg
