--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   google_sign_in: ^6.1.0
   animated_icon_button: ^1.0.2
   flutter_icons: ^1.1.0
-
+  image_picker: ^0.8.7+3
 
 
 dev_dependencies:
