--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,11 @@ flutter:
 
     - assets/images/
     - assets/icons/
+
+    - assets\images\clock_icon.png
+    - assets\images\location_icon.png
+
+    
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
