Insert Events Page to Navigation environment
Still needs to UI tweaks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,8 +70,8 @@ flutter:
     - assets/images/
     - assets/icons/
 
-    - assets\images\clock_icon.png
-    - assets\images\location_icon.png
+    - assets/images/clock_icon.png
+    - assets/images/location_icon.png
 
     
   #   - images/a_dot_ham.jpeg
