--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   animated_icon_button: ^1.0.2
   flutter_icons: ^1.1.0
   image_picker: ^0.8.7+3
+  get: ^4.6.5
 
 
 dev_dependencies:
@@ -72,6 +73,7 @@ flutter:
 
     - assets\images\clock_icon.png
     - assets\images\location_icon.png
+    - assets/images/Camera_Icon.png
 
     
   #   - images/a_dot_ham.jpeg
