--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/login_logo_emptybackg.svg
+    - assets/original_logo.png
 
     - assets/google-logo.png
     - assets/apple-logo.png
